--- a/dataset_testing.ipynb
+++ b/dataset_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,84 +20,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'dataset_type': 'QA', 'dataset_name': 'common_gen', 'dataset_config_name': 'common_gen', 'p': 0.5, 'train_split': 'train'}, {'dataset_type': 'QA', 'dataset_name': 'e2e_nlg', 'dataset_config_name': 'e2e_nlg', 'p': 0.5, 'train_split': 'train'}, {'dataset_type': 'QA', 'dataset_name': 'dart', 'dataset_config_name': 'dart', 'p': 0.5, 'validation_split': 'validation'}, {'dataset_type': 'QA', 'dataset_name': 'web_nlg', 'dataset_config_name': 'release_v3.0_en', 'p': 0.5, 'validation_split': 'test'}, {'dataset_type': 'text', 'dataset_name': 'wikitext', 'dataset_config_name': 'wikitext-2-v1', 'p': 1, 'train_split': 'train'}, {'dataset_type': 'text', 'dataset_name': 'bookcorpus', 'dataset_config_name': None, 'p': 1, 'train_split': 'train'}]\n"
+     ]
+    }
+   ],
    "source": [
-    "from datasets import load_dataset\n",
+    "# import sys\n",
+    "# sys.path.append(\"/share/edc/home/antonis/LLM-Incidental-Supervision/incidental-supervision/src\")\n",
+    "from src.dataset_configs import DatasetConfig\n",
     "\n",
+    "config_instance = DatasetConfig()\n",
     "\n",
-    "# Example usage\n",
-    "dataset_configs = [\n",
-    "    # {\n",
-    "    #     'dataset_name': 'imdb',\n",
-    "    #     'dataset_config_name': 'plain_text',\n",
-    "    #     'p': 0.5,\n",
-    "    #     'train_split': 'train',\n",
-    "    #     'validation_split': 'test',\n",
-    "    # },\n",
-    "    {\n",
-    "        'dataset_name': 'common_gen',\n",
-    "        'dataset_config_name': 'common_gen',\n",
-    "        'p': 0.3,\n",
-    "        'train_split': 'train',\n",
-    "        'validation_split': 'validation',\n",
-    "    },\n",
-    "    {\n",
-    "        'dataset_name': 'wikitext',\n",
-    "        'dataset_config_name': 'wikitext-2-v1',\n",
-    "        'p': 0.3,\n",
-    "        'train_split': 'train',\n",
-    "        'validation_split': 'validation',\n",
-    "    },\n",
-    "    {\n",
-    "        'dataset_name': 'bookcorpus',\n",
-    "        'dataset_config_name': None,\n",
-    "        'p': 0.3,\n",
-    "        'train_split': 'text',\n",
-    "    }\n",
-    "]\n",
+    "# Changing P_QA and updating 'p' values in dataset_configs\n",
+    "config_instance.update_p_values(new_value=0.5)\n",
     "\n",
-    "# Load and split datasets\n",
-    "# dataset = load_dataset(ds_config['dataset_name'], ds_config['dataset_config_name'])"
+    "# Now, the 'p' values inside config_instance.dataset_configs are updated\n",
+    "print(config_instance.dataset_configs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_pth = \"/share/edc/home/antonis/datasets/huggingface/merged_datasets/dataset_1/dataset_train.arrow\"\n",
+    "ds_pth = \"/share/edc/home/antonis/datasets/huggingface/merged_datasets/dataset_1/dataset_validation.arrow\"\n",
     "dataset = load_from_disk(ds_pth)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'text': \"`` you 're welcome . ''\"}"
+       "[\"tripleset: [['Mars Hill College', 'JOINED', '1973'], ['Mars Hill College', 'LOCATION', 'Mars Hill, North Carolina']] annotations: 'source': ['WikiSQL_decl_sents'], 'text': ['A school from Mars Hill, North Carolina, joined in 1973.']\",\n",
+       " 'tripleset: [[\\'Newberry College\\', \\'NICKNAME\\', \\'Wolves\\']] annotations: \\'source\\': [\\'WikiSQL_decl_sents\\'], \\'text\\': [\"Newberry College\\'s nickname is the wolves.\"]',\n",
+       " \"tripleset: [['Presbyterian College', 'TYPE', 'Private']] annotations: 'source': ['WikiSQL_decl_sents'], 'text': ['Presbyterian College is a private school.']\"]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
-    },
+    }
+   ],
+   "source": [
+    "dataset[0:3]['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prompt: Create a concise and grammatically correct sentence that incorporates the information provided in the triple set. Please ensure that your sentence naturally integrates this information:\n",
+      "- Mars Hill College JOINED 1973\n",
+      "- Mars Hill College LOCATION Mars Hill, North Carolina\n",
+      "Make sure your sentence reads naturally and is informative.\n",
+      "Answer: 'A school from Mars Hill, North Carolina, joined in 1973.'\n"
      ]
     }
    ],
    "source": [
-    "dataset[10000000]"
+    "import re\n",
+    "import json\n",
+    "\n",
+    "def generate_qa_prompt(example):\n",
+    "    # Extract the tripleset from the input example\n",
+    "    tripleset_match = re.search(\"tripleset: (.+?) annotations\", example)\n",
+    "    if tripleset_match:\n",
+    "        tripleset_str = tripleset_match.group(1)\n",
+    "        tripleset = json.loads(tripleset_str.replace(\"\\'\", \"\\\"\"))\n",
+    "    else:\n",
+    "        return \"Error: Could not extract tripleset from example.\"\n",
+    "    \n",
+    "    # Extract the text (answer) from the input example\n",
+    "    text_match = re.search(\"text': \\[(.+?)]\", example)\n",
+    "    if text_match:\n",
+    "        text_str = text_match.group(1)\n",
+    "        # replace escaped single quotes with actual single quotes\n",
+    "        answer = text_str.replace(\"\\\\'\", \"'\")\n",
+    "    else:\n",
+    "        return \"Error: Could not extract text from example.\"\n",
+    "    \n",
+    "    # Construct the prompt using the information in the tripleset\n",
+    "    info_list = [\"- {} {} {}\".format(triple[0], triple[1], triple[2]) for triple in tripleset]\n",
+    "    info_text = \"\\n\".join(info_list)\n",
+    "    prompt = (\"Create a concise and grammatically correct sentence that \"\n",
+    "              \"incorporates the information provided in the triple set. \"\n",
+    "              \"Please ensure that your sentence naturally integrates this \"\n",
+    "              \"information:\\n{}\\nMake sure your sentence reads naturally and is informative.\"\n",
+    "              .format(info_text))\n",
+    "    \n",
+    "    return {'prompt': prompt, 'answer': answer}\n",
+    "\n",
+    "\n",
+    "# Example usage:\n",
+    "example = \"tripleset: [['Mars Hill College', 'JOINED', '1973'], ['Mars Hill College', 'LOCATION', 'Mars Hill, North Carolina']] annotations: 'source': ['WikiSQL_decl_sents'], 'text': ['A school from Mars Hill, North Carolina, joined in 1973.']\"\n",
+    "\n",
+    "result = generate_qa_prompt(example)\n",
+    "print(\"Prompt:\", result['prompt'])\n",
+    "print(\"Answer:\", result['answer'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prompt: Please formulate a sentence using the information provided below. Ensure it is grammatically correct and makes logical sense:\n",
+      "- Mars Hill College JOINED 1973\n",
+      "- Mars Hill College LOCATION Mars Hill, North Carolina\n",
+      "Answer: 'A school from Mars Hill, North Carolina, joined in 1973.'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "import json\n",
+    "import random\n",
+    "\n",
+    "def generate_qa_prompt(example):\n",
+    "    # Extract the tripleset from the input example\n",
+    "    tripleset_match = re.search(\"tripleset: (.+?) annotations\", example)\n",
+    "    if tripleset_match:\n",
+    "        tripleset_str = tripleset_match.group(1)\n",
+    "        tripleset = json.loads(tripleset_str.replace(\"\\'\", \"\\\"\"))\n",
+    "    else:\n",
+    "        return \"Error: Could not extract tripleset from example.\"\n",
+    "    \n",
+    "    # Extract the text (answer) from the input example\n",
+    "    text_match = re.search(\"text': \\[(.+?)]\", example)\n",
+    "    if text_match:\n",
+    "        text_str = text_match.group(1)\n",
+    "        # replace escaped single quotes with actual single quotes\n",
+    "        answer = text_str.replace(\"\\\\'\", \"'\")\n",
+    "    else:\n",
+    "        return \"Error: Could not extract text from example.\"\n",
+    "    \n",
+    "    # Construct the info list\n",
+    "    info_list = [\"- {} {} {}\".format(triple[0], triple[1], triple[2]) for triple in tripleset]\n",
+    "    info_text = \"\\n\".join(info_list)\n",
+    "    \n",
+    "    # Define 10 different prompt structures\n",
+    "    prompt_structures = [\n",
+    "        \"Create a concise and grammatically correct sentence that incorporates the information provided in the triple set. Please ensure that your sentence naturally integrates this information:\\n{}\\nMake sure your sentence reads naturally and is informative.\",\n",
+    "        \"Compose a short, grammatically accurate sentence that seamlessly includes the following details:\\n{}\\nEnsure the sentence flows naturally.\",\n",
+    "        \"Using the following information, write a clear and concise sentence:\\n{}\\nThe sentence should be grammatically correct and easy to understand.\",\n",
+    "        \"Construct a sentence using the information given below. Your sentence should be brief and grammatically correct:\\n{}\",\n",
+    "        \"Your task is to create a sentence that communicates the information below in a clear and natural way:\\n{}\",\n",
+    "        \"Write a grammatical sentence that integrates the following information in a coherent manner:\\n{}\",\n",
+    "        \"Please formulate a sentence using the information provided below. Ensure it is grammatically correct and makes logical sense:\\n{}\",\n",
+    "        \"Using the data points below, create a single sentence that is grammatically correct and effectively communicates the information:\\n{}\",\n",
+    "        \"Construct a grammatically accurate and informative sentence using the details given below:\\n{}\",\n",
+    "        \"Combine the information provided into a single, grammatically correct sentence that reads naturally:\\n{}\"\n",
+    "    ]\n",
+    "    \n",
+    "    # Randomly select a prompt structure\n",
+    "    prompt = random.choice(prompt_structures).format(info_text)\n",
+    "    \n",
+    "    return {'prompt': prompt, 'answer': answer}\n",
+    "\n",
+    "\n",
+    "# Example usage:\n",
+    "example = \"tripleset: [['Mars Hill College', 'JOINED', '1973'], ['Mars Hill College', 'LOCATION', 'Mars Hill, North Carolina']] annotations: 'source': ['WikiSQL_decl_sents'], 'text': ['A school from Mars Hill, North Carolina, joined in 1973.']\"\n",
+    "\n",
+    "result = generate_qa_prompt(example)\n",
+    "print(\"Prompt:\", result['prompt'])\n",
+    "print(\"Answer:\", result['answer'])"
    ]
   },
   {
