--- a/dataset_testing.ipynb
+++ b/dataset_testing.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/local/home/antonis/.conda/envs/incidental/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_dataset, load_from_disk\n",
     "from promptsource import templates\n",
@@ -29,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,34 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'struct2text': [{'dataset_type': 'QA', 'dataset_name': 'common_gen', 'dataset_config_name': 'common_gen', 'p': 0.5, 'train_split': 'train', 'columns': {'concepts': 'concepts', 'target': 'target'}}, {'dataset_type': 'QA', 'dataset_name': 'e2e_nlg', 'dataset_config_name': 'e2e_nlg', 'p': 0.5, 'train_split': 'train', 'columns': {'meaning_representation': 'meaning_representation', 'human_reference': 'human_reference'}}, {'dataset_type': 'QA', 'dataset_name': 'dart', 'dataset_config_name': 'dart', 'p': 0.5, 'validation_split': 'validation', 'columns': {'tripleset': 'text', 'annotations': 'target'}}, {'dataset_type': 'QA', 'dataset_name': 'web_nlg', 'dataset_config_name': 'release_v3.0_en', 'p': 0.5, 'validation_split': 'test', 'columns': {'modified_triple_sets': 'modified_triple_sets', 'text': 'text'}}, {'dataset_type': 'text', 'dataset_name': 'wikitext', 'dataset_config_name': 'wikitext-2-v1', 'p': 1, 'train_split': 'train'}, {'dataset_type': 'text', 'dataset_name': 'bookcorpus', 'dataset_config_name': None, 'p': 1, 'train_split': 'train'}], 'sentiment': [{'dataset_type': 'QA', 'dataset_name': 'imdb', 'dataset_config_name': None, 'p': 0.5, 'train_split': 'train', 'columns': {'text': 'text', 'label': 'label'}}, {'dataset_type': 'QA', 'dataset_name': 'yelp_review_full', 'dataset_config_name': None, 'p': 0.5, 'train_split': 'train', 'columns': {'text': 'text', 'label': 'label'}}, {'dataset_type': 'QA', 'dataset_name': 'sentiment140', 'dataset_config_name': None, 'p': 0.5, 'validation_split': 'test', 'columns': {'text': 'text', 'sentiment': 'sentiment'}}, {'dataset_type': 'QA', 'dataset_name': 'sst2', 'dataset_config_name': None, 'p': 0.5, 'validation_split': 'test', 'columns': {'sentence': 'sentence', 'label': 'label'}}, {'dataset_type': 'text', 'dataset_name': 'wikitext', 'dataset_config_name': 'wikitext-2-v1', 'p': 1, 'train_split': 'train'}, {'dataset_type': 'text', 'dataset_name': 'bookcorpus', 'dataset_config_name': None, 'p': 1, 'train_split': 'train'}]}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# import sys\n",
-    "# sys.path.append(\"/share/edc/home/antonis/LLM-Incidental-Supervision/incidental-supervision/src\")\n",
-    "from src.dataset_configs import DatasetConfig\n",
-    "\n",
-    "config_instance = DatasetConfig()\n",
-    "\n",
-    "# Changing P_QA and updating 'p' values in dataset_configs\n",
-    "config_instance.update_p_values(new_value=0.5)\n",
-    "\n",
-    "# Now, the 'p' values inside config_instance.dataset_configs are updated\n",
-    "print(config_instance.dataset_configs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +39,7 @@
      "output_type": "stream",
      "text": [
       "Found cached dataset web_nlg (/share/edc/home/antonis/datasets/huggingface/web_nlg/release_v3.0_en/0.0.0/28ffb892f7f42450dd9558684aa43bcaf44b1b3bf0d77cb8d73534646af88dda)\n",
-      "100%|██████████| 3/3 [00:00<00:00, 238.88it/s]\n"
+      "100%|██████████| 3/3 [00:00<00:00, 202.06it/s]\n"
      ]
     }
    ],
@@ -85,31 +49,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ds_pth = \"/share/edc/home/antonis/datasets/huggingface/merged_datasets/dataset_1/dataset_train.arrow\"\n",
+    "ds_pth = \"/share/edc/home/antonis/datasets/huggingface/merged_datasets/sentiment/dataset_1/dataset_validation.arrow\"\n",
+    "dataset = load_from_disk(ds_pth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['category', 'size', 'eid', 'original_triple_sets', 'modified_triple_sets', 'shape', 'shape_type', 'lex', 'test_category', 'dbpedia_links', 'links'],\n",
-       "        num_rows: 13211\n",
-       "    })\n",
-       "    dev: Dataset({\n",
-       "        features: ['category', 'size', 'eid', 'original_triple_sets', 'modified_triple_sets', 'shape', 'shape_type', 'lex', 'test_category', 'dbpedia_links', 'links'],\n",
-       "        num_rows: 1667\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['category', 'size', 'eid', 'original_triple_sets', 'modified_triple_sets', 'shape', 'shape_type', 'lex', 'test_category', 'dbpedia_links', 'links'],\n",
-       "        num_rows: 5713\n",
-       "    })\n",
-       "})"
+       "{'text': ['text: @stellargirl I loooooooovvvvvveee my Kindle2. Not that the DX is cool, but the 2 is fantastic in its own right. sentiment: 4',\n",
+       "  'text: Reading my kindle2...  Love it... Lee childs is good read. sentiment: 4',\n",
+       "  'text: Ok, first assesment of the #kindle2 ...it fucking rocks!!! sentiment: 4',\n",
+       "  \"text: @kenburbary You'll love your Kindle2. I've had mine for a few months and never looked back. The new big one is huge! No need for remorse! :) sentiment: 4\",\n",
+       "  \"text: @mikefish  Fair enough. But i have the Kindle2 and I think it's perfect  :) sentiment: 4\",\n",
+       "  \"text: @richardebaker no. it is too big. I'm quite happy with the Kindle2. sentiment: 4\",\n",
+       "  'text: Fuck this economy. I hate aig and their non loan given asses. sentiment: 0',\n",
+       "  'text: Jquery is my new best friend. sentiment: 4',\n",
+       "  'text: Loves twitter sentiment: 4',\n",
+       "  'text: how can you not love Obama? he makes jokes about himself. sentiment: 4']}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset({\n",
+      "    features: ['text'],\n",
+      "    num_rows: 767\n",
+      "})\n",
+      "{'text': [\"text: @stellargirl I loooooooovvvvvveee my Kindle2. Not that the DX is cool, but the 2 is fantastic in its own right. sentiment: 4 text: Reading my kindle2...  Love it... Lee childs is good read. sentiment: 4 text: Ok, first assesment of the #kindle2 ...it fucking rocks!!! sentiment: 4 text: @kenburbary You'll love your Kindle2. I've had mine for a few months and never looked back. The new big one is huge! No need for remorse! :) sentiment: 4\", \"text: @mikefish  Fair enough. But i have the Kindle2 and I think it's perfect  :) sentiment: 4 text: @richardebaker no. it is too big. I'm quite happy with the Kindle2. sentiment: 4 text: Fuck this economy. I hate aig and their non loan given asses. sentiment: 0\", \"text: Jquery is my new best friend. sentiment: 4 text: Loves twitter sentiment: 4 text: how can you not love Obama? he makes jokes about himself. sentiment: 4 text: Check this video out -- President Obama at the White House Correspondents' Dinner http://bit.ly/IMXUM sentiment: 2 text: @Karoli I firmly believe that Obama/Pelosi have ZERO desire to be civil.  It's a charade and a slogan, but they want to destroy conservatism sentiment: 0\", \"text: House Correspondents dinner was last night whoopi, barbara &amp; sherri went, Obama got a standing ovation sentiment: 4 text: Watchin Espn..Jus seen this new Nike Commerical with a Puppet Lebron..sh*t was hilarious...LMAO!!! sentiment: 4 text: dear nike, stop with the flywire. that shit is a waste of science. and ugly. love, @vincentx24x sentiment: 0 text: #lebron best athlete of our generation, if not all time (basketball related) I don't want to get into inter-sport debates about   __1/2 sentiment: 4 text: I was talking to this guy last night and he was telling me that he is a die hard Spurs fan.  He also told me that he hates LeBron James. sentiment: 0\", \"text: i love lebron. http://bit.ly/PdHur sentiment: 4 text: @ludajuice Lebron is a Beast, but I'm still cheering 4 the A..til the end. sentiment: 0\", \"text: @Pmillzz lebron IS THE BOSS sentiment: 4 text: @sketchbug Lebron is a hometown hero to me, lol I love the Lakers but let's go Cavs, lol sentiment: 4 text: lebron and zydrunas are such an awesome duo sentiment: 4 text: @wordwhizkid Lebron is a beast... nobody in the NBA comes even close. sentiment: 4 text: downloading apps for my iphone! So much fun :-) There literally is an app for just about anything. sentiment: 4\", 'text: good news, just had a call from the Visa office, saying everything is fine.....what a relief! I am sick of scams out there! Stealing! sentiment: 4 text: http://twurl.nl/epkr4b - awesome come back from @biz (via @fredwilson) sentiment: 4 text: In montreal for a long weekend of R&amp;R. Much needed. sentiment: 4 text: Booz Allen Hamilton has a bad ass homegrown social collaboration platform. Way cool!  #ttiv sentiment: 4', 'text: [#MLUC09] Customer Innovation Award Winner: Booz Allen Hamilton -- http://ping.fm/c2hPP sentiment: 4 text: @SoChi2 I current use the Nikon D90 and love it, but not as much as the Canon 40D/50D. I chose the D90 for the  video feature. My mistake. sentiment: 4', 'text: need suggestions for a good IR filter for my canon 40D ... got some? pls DM sentiment: 2 text: @surfit: I just checked my google for my business- blip shows up as the second entry! Huh. Is that a good or ba... ? http://blip.fm/~6emhv sentiment: 2', \"text: @phyreman9 Google is always a good place to look. Should've mentioned I worked on the Mustang w/ my Dad, @KimbleT. sentiment: 4 text: Played with an android google phone. The slide out screen scares me I would break that fucker so fast. Still prefer my iPhone. sentiment: 0 text: US planning to resume the military tribunals at Guantanamo Bay... only this time those on trial will be AIG execs and Chrysler debt holders sentiment: 0\"]}\n"
+     ]
     },
     {
      "ename": "",
@@ -121,48 +113,47 @@
     }
    ],
    "source": [
-    "dataset"
+    "from datasets import Dataset\n",
+    "import random\n",
+    "\n",
+    "def pack_examples(dataset, max_n):\n",
+    "    # Create a list to store the packed examples\n",
+    "    packed_text = []\n",
+    "    \n",
+    "    # Number of rows in the dataset\n",
+    "    num_rows = len(dataset)\n",
+    "    \n",
+    "    index = 0\n",
+    "    \n",
+    "    # Loop through the dataset\n",
+    "    while index < num_rows:\n",
+    "        # Randomly select a value of n from uniform distribution\n",
+    "        n = random.randint(1, max_n)\n",
+    "        \n",
+    "        # Select n examples starting from current index\n",
+    "        selected_indices = range(index, min(index + n, num_rows))\n",
+    "        \n",
+    "        # Concatenate the text of the selected examples\n",
+    "        concatenated_text = ' '.join(dataset[i]['text'] for i in selected_indices)\n",
+    "        \n",
+    "        # Append the concatenated text to packed_text list\n",
+    "        packed_text.append(concatenated_text)\n",
+    "        \n",
+    "        # Update the index for next iteration\n",
+    "        index += n\n",
+    "    \n",
+    "    # Convert the packed_text list to a Dataset\n",
+    "    packed_dataset = Dataset.from_dict({'text': packed_text})\n",
+    "    \n",
+    "    # Return the packed dataset\n",
+    "    return packed_dataset\n",
+    "\n",
+    "# Example usage\n",
+    "packed_dataset = pack_examples(dataset, max_n=5)\n",
+    "\n",
+    "print(packed_dataset)\n",
+    "print(packed_dataset[0:10])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_pth = \"/share/edc/home/antonis/datasets/huggingface/merged_datasets/dataset_1/dataset_train.arrow\"\n",
-    "dataset = load_from_disk(ds_pth)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Dataset({\n",
-       "    features: ['text', 'date', 'user', 'sentiment', 'query', 'idx', 'sentence', 'label'],\n",
-       "    num_rows: 2319\n",
-       "})"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
