--- a/dataset_testing.ipynb
+++ b/dataset_testing.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,11 +40,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "ds_pth = \"/share/edc/home/antonis/datasets/huggingface/merged_datasets/sentiment_c4_small/P_1_PQA_5_promptsource_False/dataset_1/dataset_train.arrow\"\n",
+    "ds = load_from_disk(ds_pth)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = load_dataset('web_nlg', 'release_v3.0_en', cache_dir=CACHE_DIR)"
+    "# search revursively for .arrow file\n",
+    "import glob\n",
+    "import json\n",
+    "\n",
+    "base_dir = \"/share/edc/home/antonis/datasets/huggingface/merged_datasets/sentiment_unified_labels/P_1_PQA_5_promptsource_False\"\n",
+    "\n",
+    "arrow_files = glob.glob(base_dir + \"/**/*.arrow\", recursive=False)\n",
+    "print(arrow_files)\n",
+    "\n",
+    "for file_ in arrow_files:\n",
+    "    print(file_)\n",
+    "    ds = load_from_disk(file_)\n",
+    "    print(ds)\n",
+    "\n",
+    "json_files = glob.glob(base_dir + \"/**/*.json\", recursive=False)\n",
+    "print(json_files)\n",
+    "\n",
+    "\n",
+    "# def print_keys_values(data):\n",
+    "#     for key, value in data.items():\n",
+    "#         print(key)\n",
+    "#         if isinstance(value, dict):\n",
+    "#             print_keys_values(value)\n",
+    "#         else:\n",
+    "#             print(value)\n",
+    "\n",
+    "for file_ in json_files:\n",
+    "    print(file_)\n",
+    "    with open(file_, 'r') as f:\n",
+    "        data = json.load(f)\n",
+    "    # print keys and values recursively\n",
+    "    # print_keys_values(data)\n",
+    "    print(data)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arrow_files"
    ]
   },
   {
@@ -61,8 +122,11 @@
     "ds_pth = \"/share/edc/home/antonis/datasets/huggingface/merged_datasets/sentiment_c4/P_1_PQA_5_promptsource_True/dataset_1/dataset_train.arrow\"\n",
     "dataset = load_from_disk(ds_pth)\n",
     "\n",
-    "ds_path2 = \"/share/edc/home/antonis/datasets/huggingface/merged_datasets/sentiment_c4/P_1_PQA_5_promptsource_True/dataset_0/dataset_train.arrow\"\n",
-    "dataset2 = load_from_disk(ds_path2)"
+    "# ds_path2 = \"/share/edc/home/antonis/datasets/huggingface/merged_datasets/sentiment_c4/P_1_PQA_5_promptsource_True/dataset_0/dataset_train.arrow\"\n",
+    "# dataset2 = load_from_disk(ds_path2)\n",
+    "\n",
+    "ds_pth_validation = \"/share/edc/home/antonis/datasets/huggingface/merged_datasets/sentiment_c4/P_1_PQA_5_promptsource_True/dataset_1/dataset_validation.arrow\"\n",
+    "dataset_validation = load_from_disk(ds_pth_validation)"
    ]
   },
   {
@@ -71,16 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset[-5:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset2[-5:]"
+    "len(ds)"
    ]
   },
   {
@@ -115,6 +170,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "\n",
+    "ds_path = \"/share/edc/home/antonis/datasets/huggingface/C4/limit_total_tokens_1240000000/train\"\n",
+    "ds = load_from_disk(ds_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(f\"train1: {len(dataset)}\")\n",
     "print(f\"train2: {len(dataset2)}\")\n",
     "print(f\"val1: {len(dataset_val)}\")\n",
@@ -138,8 +205,6 @@
    "source": [
     "# dataset_val[-len(dataset2_val):]\n",
     "\n",
-    "# new column\n",
-    "\n",
     "dataset_val1 = dataset_val.select(range(len(ds_imdb)))\n",
     "dataset_val2 = dataset_val.select(range(len(ds_imdb), len(dataset_val)))\n",
     "\n",
@@ -155,8 +220,7 @@
     "dataset_val = concatenate_datasets([dataset_val1, dataset_val2])\n",
     "\n",
     "# save the new dataset\n",
-    "dataset_val.save_to_disk(os.path.join(os.path.dirname(ds_pth_val), \"dataset_validation_wname.arrow\"))\n",
-    "\n"
+    "dataset_val.save_to_disk(os.path.join(os.path.dirname(ds_pth_val), \"dataset_validation_wname.arrow\"))"
    ]
   },
   {
@@ -170,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,29 +263,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found cached dataset yelp_review_full (/share/edc/home/antonis/datasets/huggingface/yelp_review_full/yelp_review_full/1.0.0/e8e18e19d7be9e75642fc66b198abadb116f73599ec89a69ba5dd8d1e57ba0bf)\n",
-      "Found cached dataset sentiment140 (/share/edc/home/antonis/datasets/huggingface/sentiment140/sentiment140/1.0.0/f81c014152931b776735658d8ae493b181927de002e706c4d5244ecb26376997)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# datasets = get_T0MixtureDatasets(\"test\", max_samples=1000, return_as_dict=True)\n",
     "# ds_sst = load_dataset(\"sst\", \"default\", split=\"test\", cache_dir=CACHE_DIR)\n",
-    "# ds_imdb = load_dataset(\"imdb\", split=\"test\", cache_dir=CACHE_DIR)\n",
-    "ds_yelp_review = load_dataset(\"yelp_review_full\", split=\"train\", cache_dir=CACHE_DIR)\n",
-    "ds_sentiment140 = load_dataset(\"sentiment140\", split=\"train\", cache_dir=CACHE_DIR)"
+    "ds_imdb = load_dataset(\"imdb\", split=\"test\", cache_dir=CACHE_DIR)\n",
+    "# ds_yelp_review = load_dataset(\"yelp_review_full\", split=\"train\", cache_dir=CACHE_DIR)\n",
+    "ds_sentiment140 = load_dataset(\"sentiment140\", split=\"test\", cache_dir=CACHE_DIR)\n",
+    "\n",
+    "print(f\"IMDB len: {len(ds_imdb)}\")\n",
+    "# print(f\"Yelp len: {len(ds_yelp_review)}\")\n",
+    "print(f\"Sentiment140 len: {len(ds_sentiment140)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_yelp_review[:1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,32 +300,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2210\n",
-      "25000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Map:   0%|          | 0/1000 [00:00<?, ? examples/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                               \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(ds_sst))\n",
     "print(len(ds_imdb))\n",
@@ -298,17 +343,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                               \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save prompted dataset\n",
     "\n",
@@ -317,26 +354,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sst/default Dataset({\n",
-      "    features: ['sentence', 'label', 'tokens', 'tree'],\n",
-      "    num_rows: 1000\n",
-      "})\n",
-      "[<promptsource.templates.Template object at 0x7f5180119590>, <promptsource.templates.Template object at 0x7f5128342550>, <promptsource.templates.Template object at 0x7f51285ab410>, <promptsource.templates.Template object at 0x7f51285ab150>, <promptsource.templates.Template object at 0x7f51285c0bd0>]\n",
-      "imdb Dataset({\n",
-      "    features: ['text', 'label'],\n",
-      "    num_rows: 1000\n",
-      "})\n",
-      "[<promptsource.templates.Template object at 0x7f51285867d0>, <promptsource.templates.Template object at 0x7f51285a6290>, <promptsource.templates.Template object at 0x7f51285de550>, <promptsource.templates.Template object at 0x7f51285d7750>, <promptsource.templates.Template object at 0x7f51283a3e90>, <promptsource.templates.Template object at 0x7f51285b4950>, <promptsource.templates.Template object at 0x7f51283b5b50>, <promptsource.templates.Template object at 0x7f51283b5ad0>, <promptsource.templates.Template object at 0x7f51283b5a10>, <promptsource.templates.Template object at 0x7f51283a3ed0>, <promptsource.templates.Template object at 0x7f51283b4210>]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for name, dataset in datasets.items():\n",
     "    print(name, dataset)\n",
