--- a/dataset_testing.ipynb
+++ b/dataset_testing.ipynb
@@ -2,21 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/local/home/antonis/.conda/envs/incidental/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_dataset, load_from_disk, concatenate_datasets\n",
     "from promptsource import templates\n",
+    "import json\n",
     "\n",
     "CACHE_DIR = \"/share/edc/home/antonis/datasets/huggingface\"\n",
     "import os\n",
@@ -29,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,21 +32,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ds_pth = \"/share/edc/home/antonis/datasets/huggingface/merged_datasets/c4_3001124/dataset_train.arrow\"\n",
+    "# ds = load_from_disk(ds_pth)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ds: Dataset({\n",
+      "    features: ['text'],\n",
+      "    num_rows: 3001124\n",
+      "})\n"
      ]
     }
    ],
    "source": [
-    "ds_pth = \"/share/edc/home/antonis/datasets/huggingface/merged_datasets/sentiment_c4_small/P_1_PQA_5_promptsource_False/dataset_1/dataset_train.arrow\"\n",
-    "ds = load_from_disk(ds_pth)"
+    "# ds = load_dataset(\"glue\", \"wnli\", split=\"test\", cache_dir=CACHE_DIR)\n",
+    "# ds = load_dataset(\"anli\", split=\"test_r1\", cache_dir=CACHE_DIR)\n",
+    "# ds = load_dataset(\"anli\", split=\"test_r1\", cache_dir=CACHE_DIR)\n",
+    "# ds = load_dataset(\"snli\", split=\"train\", cache_dir=CACHE_DIR)\n",
+    "# ds = load_dataset(\"glue\", \"rte\", split=\"train\", cache_dir=CACHE_DIR)\n",
+    "# ds = load_from_disk(\"/share/edc/home/antonis/datasets/huggingface/merged_datasets/NLI/P_1_PQA_5_promptsource_False/dataset_1/dataset_train.arrow\")\n",
+    "# ds = load_from_disk(\"/share/edc/home/antonis/datasets/huggingface/merged_datasets/sentiment_unified_labels/P_1_PQA_5_promptsource_False/dataset_0/dataset_train.arrow\")\n",
+    "# ds = load_from_disk(\"/share/edc/home/antonis/datasets/huggingface/merged_datasets/sentiment_c4/P_1_PQA_5_promptsource_True/dataset_0/dataset_train.arrow\")\n",
+    "\n",
+    "path = \"/share/edc/home/antonis/datasets/huggingface/merged_datasets/NLI/P_1_PQA_1_psource_False_prompt_False/\"\n",
+    "dataset = \"dataset_1\"\n",
+    "ds = load_from_disk(os.path.join(path, dataset, \"dataset_train.arrow\"))\n",
+    "# n_tokens = json.load(open(os.path.join(path, dataset, \"token_counts.json\"), \"r\"))\n",
+    "# print(f\"n_tokens: {n_tokens['train']:.2e}\")\n",
+    "\n",
+    "print(f\"ds: {ds}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds['label']\n",
+    "\n",
+    "# get unique labels\n",
+    "labels = set(ds['label'])\n",
+    "print(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = load_from_disk(\"/share/edc/home/antonis/datasets/huggingface/merged_datasets/NLI/P_1_PQA_5_promptsource_False/dataset_1/dataset_train.arrow\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = ds['train']['label']\n",
+    "\n",
+    "# find -1 in labels\n",
+    "non_matching = []\n",
+    "for i in range(len(labels)):\n",
+    "    if labels[i] == -1:\n",
+    "        print(i)\n",
+    "        non_matching.append(i)\n",
+    "        print_example(ds['train'][i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds[0:10]['label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds[0:3]"
    ]
   },
   {
