--- a/src/test_prompts.ipynb
+++ b/src/test_prompts.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/local/home/antonis/.conda/envs/incidental/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import datasets\n",
@@ -17,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +34,7 @@
      "output_type": "stream",
      "text": [
       "Found cached dataset sst2 (/share/edc/home/antonis/datasets/huggingface/sst2/default/2.0.0/9896208a8d85db057ac50c72282bcb8fe755accc671a57dd8059d4e130961ed5)\n",
-      "100%|██████████| 3/3 [00:00<00:00, 81.04it/s]\n"
+      "100%|██████████| 3/3 [00:00<00:00, 85.88it/s]\n"
      ]
     },
     {
@@ -35,16 +44,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m dataset \u001b[39m=\u001b[39m datasets\u001b[39m.\u001b[39mload_dataset(DATASET_NAME, cache_dir\u001b[39m=\u001b[39mCACHE_DIR)\n\u001b[1;32m     12\u001b[0m \u001b[39m# Load the templates (replace 'squad' with the name of the dataset you want to use)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m prompt_templates \u001b[39m=\u001b[39m templates\u001b[39m.\u001b[39;49mget_dataset_templates(DATASET_NAME)\n\u001b[1;32m     15\u001b[0m \u001b[39m# Select a specific template\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[39m# (replace 'question' with the name of the template you want to use)\u001b[39;00m\n\u001b[1;32m     17\u001b[0m template \u001b[39m=\u001b[39m prompt_templates[\u001b[39m'\u001b[39m\u001b[39mquestion\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "Cell \u001b[0;32mIn[2], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m dataset \u001b[39m=\u001b[39m datasets\u001b[39m.\u001b[39mload_dataset(DATASET_NAME, cache_dir\u001b[39m=\u001b[39mCACHE_DIR)\n\u001b[1;32m     12\u001b[0m \u001b[39m# Load the templates (replace 'squad' with the name of the dataset you want to use)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m prompt_templates \u001b[39m=\u001b[39m templates\u001b[39m.\u001b[39;49mget_dataset_templates(DATASET_NAME)\n\u001b[1;32m     15\u001b[0m \u001b[39m# Select a specific template\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[39m# (replace 'question' with the name of the template you want to use)\u001b[39;00m\n\u001b[1;32m     17\u001b[0m template \u001b[39m=\u001b[39m prompt_templates[\u001b[39m'\u001b[39m\u001b[39mquestion\u001b[39m\u001b[39m'\u001b[39m]\n",
       "\u001b[0;31mAttributeError\u001b[0m: module 'promptsource.templates' has no attribute 'get_dataset_templates'"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +102,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mdatasets\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpromptsource\u001b[39;00m \u001b[39mimport\u001b[39;00m TemplateCollection\n\u001b[1;32m      4\u001b[0m \u001b[39m# Load a dataset from Hugging Face datasets library\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39m# (replace 'squad' with the name of the dataset you want to use)\u001b[39;00m\n\u001b[1;32m      6\u001b[0m dataset \u001b[39m=\u001b[39m datasets\u001b[39m.\u001b[39mload_dataset(\u001b[39m\"\u001b[39m\u001b[39msquad\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mdatasets\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpromptsource\u001b[39;00m \u001b[39mimport\u001b[39;00m TemplateCollection\n\u001b[1;32m      4\u001b[0m \u001b[39m# Load a dataset from Hugging Face datasets library\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39m# (replace 'squad' with the name of the dataset you want to use)\u001b[39;00m\n\u001b[1;32m      6\u001b[0m dataset \u001b[39m=\u001b[39m datasets\u001b[39m.\u001b[39mload_dataset(\u001b[39m\"\u001b[39m\u001b[39msquad\u001b[39m\u001b[39m\"\u001b[39m)\n",
       "\u001b[0;31mImportError\u001b[0m: cannot import name 'TemplateCollection' from 'promptsource' (/local/home/antonis/.conda/envs/incidental/lib/python3.11/site-packages/promptsource/__init__.py)"
      ]
     }
