--- a/create_answer_choice_ds.ipynb
+++ b/create_answer_choice_ds.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/local/home/antonis/.conda/envs/incidental/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_dataset, load_from_disk, concatenate_datasets\n",
     "from promptsource import templates\n",
@@ -29,9 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/local/home/antonis/.conda/envs/incidental/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
@@ -127,17 +127,10 @@
     "from datasets import load_dataset, Dataset\n",
     "from promptsource.templates import DatasetTemplates, TemplateCollection\n",
     "# set logging level to INFO\n",
-    "from src._promptsource import get_T0MixtureDatasets, TOMixture \n",
+    "# from src._promptsource import get_T0MixtureDatasets \n",
     "logger = logging.getLogger(__name__)\n",
     "logger.setLevel(20)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -145,15 +138,13 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'type' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m datasets \u001b[39m=\u001b[39m get_T0MixtureDatasets(\u001b[39m\"\u001b[39;49m\u001b[39mtest\u001b[39;49m\u001b[39m\"\u001b[39;49m, max_samples\u001b[39m=\u001b[39;49m\u001b[39m1000\u001b[39;49m, return_as_dict\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m      2\u001b[0m ds_sst \u001b[39m=\u001b[39m load_dataset(\u001b[39m\"\u001b[39m\u001b[39msst\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mdefault\u001b[39m\u001b[39m\"\u001b[39m, split\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mtest\u001b[39m\u001b[39m\"\u001b[39m, cache_dir\u001b[39m=\u001b[39mCACHE_DIR)\n\u001b[1;32m      3\u001b[0m ds_imdb \u001b[39m=\u001b[39m load_dataset(\u001b[39m\"\u001b[39m\u001b[39mimdb\u001b[39m\u001b[39m\"\u001b[39m, split\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mtest\u001b[39m\u001b[39m\"\u001b[39m, cache_dir\u001b[39m=\u001b[39mCACHE_DIR)\n",
-      "File \u001b[0;32m/share/edc/home/antonis/LLM-Incidental-Supervision/incidental-supervision/src/_promptsource.py:79\u001b[0m, in \u001b[0;36mget_T0MixtureDatasets\u001b[0;34m(split, max_samples, return_as_dict)\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     76\u001b[0m \u001b[39mT0MixtureDatasets creates a separate dataset for each dataset in the mixture\u001b[39;00m\n\u001b[1;32m     77\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     78\u001b[0m datasets \u001b[39m=\u001b[39m {} \u001b[39mif\u001b[39;00m return_as_dict \u001b[39melse\u001b[39;00m []\n\u001b[0;32m---> 79\u001b[0m \u001b[39mfor\u001b[39;00m name, subset \u001b[39min\u001b[39;00m TOMixture:\n\u001b[1;32m     80\u001b[0m     dataset \u001b[39m=\u001b[39m load_dataset(name, subset, split\u001b[39m=\u001b[39msplit, cache_dir\u001b[39m=\u001b[39mCACHE_DIR)\n\u001b[1;32m     81\u001b[0m     \u001b[39mif\u001b[39;00m max_samples:\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'type' object is not iterable"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset sst (/share/edc/home/antonis/datasets/huggingface/sst/default/1.0.0/b8a7889ef01c5d3ae8c379b84cc4080f8aad3ac2bc538701cbe0ac6416fb76ff)\n",
+      "Found cached dataset imdb (/share/edc/home/antonis/datasets/huggingface/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0)\n",
+      "Found cached dataset sst (/share/edc/home/antonis/datasets/huggingface/sst/default/1.0.0/b8a7889ef01c5d3ae8c379b84cc4080f8aad3ac2bc538701cbe0ac6416fb76ff)\n",
+      "Found cached dataset imdb (/share/edc/home/antonis/datasets/huggingface/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0)\n"
      ]
     }
    ],
@@ -167,10 +158,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset multi_nli (/share/edc/home/antonis/datasets/huggingface/multi_nli/default/0.0.0/591f72eb6263d1ab527561777936b199b714cda156d35716881158a2bd144f39)\n"
+     ]
+    }
+   ],
+   "source": [
+    "name, subset = \"multi_nli\", None\n",
+    "dataset = load_dataset(name, subset, split=\"train\", cache_dir=CACHE_DIR)\n",
+    "templates = [template for id, template in DatasetTemplates(name, subset).templates.items()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['answer_choices', 'id', 'jinja', 'metadata', 'name', 'reference'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['True', 'Inconclusive', 'False']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(templates[0].__dict__.keys())\n",
+    "templates[0].answer_choices.split(' ||| ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "template = random.choice(templates)\n",
+    "prompt, answer = template.apply(dataset[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Conceptually cream skimming has two basic dimensions - product and geography. Are we justified in saying that \"Product and geography are what make cream skimming work. \"? Yes, no, or maybe?',\n",
+       " 'Maybe')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt, answer"
+   ]
   }
  ],
  "metadata": {
