--- a/dataset_testing.ipynb
+++ b/dataset_testing.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/local/home/antonis/.conda/envs/incidental/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from datasets import load_dataset, load_from_disk, concatenate_datasets\n",
-    "from promptsource import templates\n",
+    "# from promptsource import templates\n",
     "import json\n",
     "\n",
     "CACHE_DIR = \"/share/edc/home/antonis/datasets/huggingface\"\n",
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,52 +41,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ds_pth = \"/share/edc/home/antonis/datasets/huggingface/merged_datasets/c4_3001124/dataset_train.arrow\"\n",
-    "# ds = load_from_disk(ds_pth)"
+    "# ds = load_dataset(\"conceptofmind/dialog_submix_original\", split=\"train\")\n",
+    "# ds = load_dataset(\"conceptofmind/cot_submix_original\", split=\"train\")\n",
+    "# ds = load_dataset(\"conceptofmind/flan2021_submix_original\", split=\"train\")\n",
+    "ds = load_from_disk(\"/share/edc/home/antonis/datasets/huggingface/flan_v1/c4_mixed_NLI\")"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "ds_task = load_from_disk('/share/edc/home/antonis/datasets/huggingface/flan_v1_task_ds_p_10')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ds: Dataset({\n",
-      "    features: ['text'],\n",
-      "    num_rows: 3001124\n",
-      "})\n"
-     ]
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    NLI: Dataset({\n",
+       "        features: ['inputs', 'targets', 'task_source', 'task_name', 'template_type', 'text'],\n",
+       "        num_rows: 72402\n",
+       "    })\n",
+       "    QA: Dataset({\n",
+       "        features: ['inputs', 'targets', 'task_source', 'task_name', 'template_type', 'text'],\n",
+       "        num_rows: 1070\n",
+       "    })\n",
+       "    Summarization: Dataset({\n",
+       "        features: ['inputs', 'targets', 'task_source', 'task_name', 'template_type', 'text'],\n",
+       "        num_rows: 72254\n",
+       "    })\n",
+       "    Commonsense: Dataset({\n",
+       "        features: ['inputs', 'targets', 'task_source', 'task_name', 'template_type', 'text'],\n",
+       "        num_rows: 37262\n",
+       "    })\n",
+       "    Sentiment: Dataset({\n",
+       "        features: ['inputs', 'targets', 'task_source', 'task_name', 'template_type', 'text'],\n",
+       "        num_rows: 41361\n",
+       "    })\n",
+       "    Paraphrase: Dataset({\n",
+       "        features: ['inputs', 'targets', 'task_source', 'task_name', 'template_type', 'text'],\n",
+       "        num_rows: 25032\n",
+       "    })\n",
+       "    Reading Comp.: Dataset({\n",
+       "        features: ['inputs', 'targets', 'task_source', 'task_name', 'template_type', 'text'],\n",
+       "        num_rows: 47454\n",
+       "    })\n",
+       "    Reading Comp. w/ Commonsense: Dataset({\n",
+       "        features: ['inputs', 'targets', 'task_source', 'task_name', 'template_type', 'text'],\n",
+       "        num_rows: 19884\n",
+       "    })\n",
+       "    Coreference: Dataset({\n",
+       "        features: ['inputs', 'targets', 'task_source', 'task_name', 'template_type', 'text'],\n",
+       "        num_rows: 11455\n",
+       "    })\n",
+       "    Misc: Dataset({\n",
+       "        features: ['inputs', 'targets', 'task_source', 'task_name', 'template_type', 'text'],\n",
+       "        num_rows: 30450\n",
+       "    })\n",
+       "    Math: Dataset({\n",
+       "        features: ['inputs', 'targets', 'task_source', 'task_name', 'template_type', 'text'],\n",
+       "        num_rows: 10889\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# ds = load_dataset(\"glue\", \"wnli\", split=\"test\", cache_dir=CACHE_DIR)\n",
-    "# ds = load_dataset(\"anli\", split=\"test_r1\", cache_dir=CACHE_DIR)\n",
-    "# ds = load_dataset(\"anli\", split=\"test_r1\", cache_dir=CACHE_DIR)\n",
-    "# ds = load_dataset(\"snli\", split=\"train\", cache_dir=CACHE_DIR)\n",
-    "# ds = load_dataset(\"glue\", \"rte\", split=\"train\", cache_dir=CACHE_DIR)\n",
-    "# ds = load_from_disk(\"/share/edc/home/antonis/datasets/huggingface/merged_datasets/NLI/P_1_PQA_5_promptsource_False/dataset_1/dataset_train.arrow\")\n",
-    "# ds = load_from_disk(\"/share/edc/home/antonis/datasets/huggingface/merged_datasets/sentiment_unified_labels/P_1_PQA_5_promptsource_False/dataset_0/dataset_train.arrow\")\n",
-    "# ds = load_from_disk(\"/share/edc/home/antonis/datasets/huggingface/merged_datasets/sentiment_c4/P_1_PQA_5_promptsource_True/dataset_0/dataset_train.arrow\")\n",
-    "\n",
-    "path = \"/share/edc/home/antonis/datasets/huggingface/merged_datasets/NLI/P_1_PQA_1_psource_False_prompt_False/\"\n",
-    "dataset = \"dataset_1\"\n",
-    "ds = load_from_disk(os.path.join(path, dataset, \"dataset_train.arrow\"))\n",
-    "# n_tokens = json.load(open(os.path.join(path, dataset, \"token_counts.json\"), \"r\"))\n",
-    "# print(f\"n_tokens: {n_tokens['train']:.2e}\")\n",
-    "\n",
-    "print(f\"ds: {ds}\")"
+    "ds_task"
    ]
   },
   {
@@ -86,11 +131,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds['label']\n",
+    "len(set(ds['task_name']))\n",
+    "set(ds['task_name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "required_tasks = [\n",
+    "    \"anli\",\n",
+    "    \"rte\",\n",
+    "    \"cb\",\n",
+    "    \"snli\",\n",
+    "    \"mnli\",\n",
+    "    \"wnli\",\n",
+    "    \"qnli\"\n",
+    "]\n",
     "\n",
-    "# get unique labels\n",
-    "labels = set(ds['label'])\n",
-    "print(labels)"
+    "ds1 = ds.filter(lambda example: any(task in example['task_name'] for task in required_tasks))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def concatenate_columns(dataset, column1, column2, new_column_name):\n",
+    "    def concat_example(example):\n",
+    "        example[new_column_name] = example[column1] + \" \" + example[column2]\n",
+    "        return example\n",
+    "\n",
+    "    return dataset.map(concat_example)\n",
+    "\n",
+    "# Usage example:\n",
+    "ds1 = concatenate_columns(ds1, 'inputs', 'targets', 'text')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import GPT2Tokenizer\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "def total_tokens(dataset, text_field):\n",
+    "    tokenizer = GPT2Tokenizer.from_pretrained('gpt2')\n",
+    "    total_count = 0\n",
+    "    \n",
+    "    for example in tqdm(dataset, desc=\"Counting tokens\"):\n",
+    "        text = example[text_field]\n",
+    "        tokens = tokenizer.tokenize(text)\n",
+    "        total_count += len(tokens)\n",
+    "\n",
+    "    # Print the total count in scientific notation\n",
+    "    print(f\"Total number of tokens: {total_count:.2e}\")\n",
+    "\n",
+    "    return total_count\n",
+    "\n",
+    "# Usage example:\n",
+    "total_count = total_tokens(ds1, 'text')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Total number of tokens: {total_count:.2e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ds['label']\n",
+    "\n",
+    "# # get unique labels\n",
+    "# labels = set(ds['label'])\n",
+    "# print(labels)"
    ]
   },
   {
@@ -117,24 +246,6 @@
     "        print(i)\n",
     "        non_matching.append(i)\n",
     "        print_example(ds['train'][i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds[0:10]['label']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds[0:3]"
    ]
   },
   {
@@ -356,15 +467,6 @@
     "print(f\"IMDB len: {len(ds_imdb)}\")\n",
     "# print(f\"Yelp len: {len(ds_yelp_review)}\")\n",
     "print(f\"Sentiment140 len: {len(ds_sentiment140)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_yelp_review[:1]"
    ]
   },
   {
