--- a/wimbd_analysis_translation.ipynb
+++ b/wimbd_analysis_translation.ipynb
@@ -304,7 +304,7 @@
     "            if task not in dataset2score:\n",
     "                dataset2score[task] = {'score': [], 'n_samples': []}\n",
     "            task_df = model_results[model_results['task'] == task]\n",
-    "            task_score = task_df.iloc[0]['bleu']\n",
+    "            task_score = task_df.iloc[0][metric]\n",
     "            task_n_samples = task_df['value'].sum()\n",
     "            model2score[model]['score'].append(task_score)\n",
     "            model2score[model]['n_samples'].append(task_n_samples)\n",
